--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash.isequal": "^4.5.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
