--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-day-picker": "^9.8.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
