--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "jotai": "^2.12.5",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "next": "15.3.4",
